force-app/main/default/objects/Hotspots__c/Hotspots__c.object-meta.xml
<CustomObject>
    <label>Hotspots</label>
    <nameField>
        <label>Hotspots Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotspots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>