force-app/main/default/objects/Hotspots__c/fields/Prototype_Screen_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Prototype_Screen_Configuration__c</fullName>
    <label>Prototype Screen Configuration</label>
    <referenceTo>Prototype_Screen_Configuration__c</referenceTo>
    <relationshipLabel>Hotspots</relationshipLabel>
    <relationshipName>Hotspots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>