force-app/main/default/objects/Hotspots__c/fields/Target_Screen__c.field-meta.xml
<CustomField>
    <fullName>Target_Screen__c</fullName>
    <label>Target Screen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>