force-app/main/default/objects/Hotspots__c/fields/X_cordinate__c.field-meta.xml
<CustomField>
    <fullName>X_cordinate__c</fullName>
    <label>X-cordinate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>