force-app/main/default/objects/Hotspots__c/fields/Y_cordinate__c.field-meta.xml
<CustomField>
    <fullName>Y_cordinate__c</fullName>
    <label>Y-cordinate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>